--- a/src/components/style.css
+++ b/src/components/style.css
@@ -7,13 +7,13 @@
   
   .gradient-border .inner-content {
     padding: 20px;
-    background-color: white; /* Background for the inner content */
+    background-color: white; 
     border-radius: 8px;
   }
 
   .masonry-container {
     padding: 120px;
-    background-color: #fefeff;
+    /* background-color: #fefeff; */
   }
   
   .title {
@@ -32,7 +32,7 @@
   }
   
   .masonry-item {
-    background: #ffffff;
+    background: #fff9eb;
     overflow: hidden;
     margin-bottom: 16px;
     transition: transform 0.3s;
@@ -73,4 +73,29 @@
   }
 
 
+  .lh-normal {
+    line-height: normal;
+  }
+
+  .border-class {
+    border: 1px solid black;
+    /* padding: 10px; */
+    border-radius: 46px;
+    padding: 5px 25px;
+  }
+
+  .w-7 {
+    width: 7rem !important;
+  }
+
+  header {
+    margin: 0px 60px;
+  }
+
   
+@media (max-width: 768px) {
+  .masonry-container {
+    padding: 0px;
+    /* background-color: #fefeff; */
+  }
+}
