--- a/src/index.css
+++ b/src/index.css
@@ -198,3 +198,10 @@ Hero{
 }
 
 
+@media (max-width: 768px) {
+  header {
+      margin: 0px 0px !important;
+      left: 0% !important;
+      right: 0% !important;
+  }
+}
